# rollio

./: .gitignore  AGENTS.md  DESIGN.md  LEROBOT_FORMAT.md  fnctl_demo.py  pyproject.toml  requirements-tui-rich.txt  requirements-tui-webcam.txt  rollio_config.bak.yaml  rollio_config.yaml  test  tui_webcam.py  tui_webcam_rich.py
.cursor/plans/: airbot_eef_entities_43adde12.plan.md  pyav_codec_refactor_5b095c94.plan.md  scheduler_comparison_400b890f.plan.md  split_airbot_eefs_f568d684.plan.md
.github/workflows/: ci.yml  release.yml
doc/: ARCHITECTURE.md  configuration.md  rollio_config.template.yaml
rollio/: __init__.py  __main__.py  cli.py  defaults.py  plotjuggler.py  teleop_policy.py
rollio/collect/: __init__.py  camera_bridge.py  devices.py  runtime.py  scheduler.py  service.py  teleop.py
rollio/config/: __init__.py  pairing.py  schema.py
rollio/episode/: codecs.py  recorder.py  writer.py
rollio/replay/: __init__.py  dataset.py  runtime.py
rollio/robot/: __init__.py  airbot_eef.py  airbot_play.py  airbot_shared.py  base.py  can_utils.py  pinocchio_kinematics.py  pseudo_robot.py  scanner.py
rollio/robot/airbot/: __init__.py  can.py  control_loop.py  eef.py  play.py  shared.py
rollio/robot/urdf/: play_e2.urdf
rollio/sensors/: __init__.py  base.py  pseudo_camera.py  pseudo_robot.py  realsense_camera.py  scanner.py  v4l2_camera.py
rollio/tests/: __init__.py  airbot_g2.py  airbot_play.py  airbot_play_teleop_mit_trace.py
rollio/tui/: app.py  renderer.py  replay.py  runtime_view.py  timing.py  wizard.py
rollio/utils/: time.py
tests/: __init__.py  conftest.py  support_tui.py  test_airbot.py  test_airbot_play_teleop_mit_trace.py  test_cli.py  test_collect_devices.py  test_collect_runtime.py  test_collect_service.py  test_config_helpers.py  test_episode_writer.py  test_plotjuggler.py  test_replay_runtime.py  test_robot.py  test_sensors_scanner.py  test_tui_app.py  test_tui_renderer.py  test_tui_replay.py  test_tui_wizard.py  worker_factory_plugin.py
