[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollio"
version = "0.1.0"
description = "Timestamp-aligned robot episode collection for VLA/RL training"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda13x>=13.0"]
realsense = ["pyrealsense2"]
airbot = ["pin", "python-can>=4.0"]
completion = ["argcomplete>=3.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
lint = ["black>=24.0", "pylint>=3.0"]
all = ["argcomplete>=3.0"]

[project.scripts]
rollio = "rollio.cli:main"

[tool.setuptools.packages.find]
include = ["rollio*"]

[tool.setuptools.package-data]
"rollio.robot" = ["urdf/*.urdf"]

[tool.pytest.ini_options]
markers = [
    "hardware: marks tests that require actual hardware (deselect with '-m \"not hardware\"')",
]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "external"

[tool.pylint.main]
py-version = "3.11"
jobs = 0
ignore-paths = ["^external/", "^build/", "^dist/"]
extension-pkg-allow-list = ["airbot_hardware_py"]
ignored-modules = ["cv2", "pyrealsense2", "pinocchio"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "import-error",
    "no-name-in-module",
    "redefined-outer-name",
]
